# ChangeLog for dev-ruby/nokogiri
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/ChangeLog,v 1.54 2011/05/23 20:57:32 tomka Exp $

  23 May 2011; Thomas Kahle <tomka@gentoo.org> nokogiri-1.4.4-r1.ebuild:
  ~x86 per bug 365417

*nokogiri-1.4.4-r1 (30 Apr 2011)

  30 Apr 2011; Hans de Graaff <graaff@gentoo.org> +nokogiri-1.4.4-r1.ebuild:
  dev-ruby/weakling is actually a runtime dependency when using jruby. Drop
  x86 keyword because of this, bug 365417.

  30 Apr 2011; Hans de Graaff <graaff@gentoo.org> nokogiri-1.4.4.ebuild:
  Depend on rdoc for documentation, as the rdoc implementation of ruby 1.8
  ends up in an endless loop.

  20 Apr 2011; Hans de Graaff <graaff@gentoo.org>
  -files/nokogiri-1.4.1-ruby19.patch,
  -files/nokogiri-1.4.2+ruby-1.9.2.patch:
  Remove unused patches.

  20 Apr 2011; Hans de Graaff <graaff@gentoo.org> nokogiri-1.4.4.ebuild,
  +files/nokogiri-1.4.4-libxml-2.7.8.patch:
  Fix tests with libxml 2.8.7 with upstream patch.

  16 Feb 2011; Hans de Graaff <graaff@gentoo.org> -nokogiri-1.4.1-r1.ebuild,
  -nokogiri-1.4.3.1.ebuild, -nokogiri-1.4.3.1-r1.ebuild:
  Remove old versions.

  02 Feb 2011; Diego E. Pettenò <flameeyes@gentoo.org> nokogiri-1.4.4.ebuild:
  Add missing racc dependency; skip tests for JRuby since they require
  libraries we don't have (weakling).

  10 Jan 2011; Hans de Graaff <graaff@gentoo.org> nokogiri-1.4.4.ebuild:
  Keyword ~x86-macos.

  18 Dec 2010; Hans de Graaff <graaff@gentoo.org>
  nokogiri-1.4.3.1-r1.ebuild, nokogiri-1.4.4.ebuild:
  Add keywords for ~ppc and ~ppc64 since a bump happened before
  re-keywording.

  03 Dec 2010; Fabian Groffen <grobian@gentoo.org> nokogiri-1.4.4.ebuild:
  Added Prefix keywords, fix for Darwin

  29 Nov 2010; Hans de Graaff <graaff@gentoo.org> +nokogiri-1.4.1-r1.ebuild:
  Add back nokogiri-1.4.1-r1 since it is the last version that supports
  jruby and dev-ruby/mechanize depends on it.
