@@ -4,13 +4,12 @@ Hash: SHA256
 AUX nokogiri-1.4.4-libxml-2.7.8.patch 729 RMD160 06a660ef03645ca35cf93fb5aa5ec46a5ce0da34 SHA1 9bcd7a6fbefc75db8691200e9714460864a51ed3 SHA256 56fbfb502adbb04dc77373a2d7c3708cf7b7cf21f0419f2fc6ff40dc6fa56321
 DIST nokogiri-1.4.4.gem 198656 RMD160 9f5fc2b15da160ccd03a096cf3074afb46e1a170 SHA1 15f5c381d98a4e53a879981b8fbc301d3561c675 SHA256 3d1ed8cc4b6caf1f1cdb7b53be26e72ab70b7111d463d76f898f1f32d998a7b2
 EBUILD nokogiri-1.4.4-r1.ebuild 1964 RMD160 9d0b822d4e35ed9f8539022e84b9b0d722975576 SHA1 9f1cf1d7ccdfe215b4e3c8857f2512eefcab75c9 SHA256 a6d8113d622afd1e6cf982467317cab6f16cf0b32448b95c067ac9789cd7a3a0
-EBUILD nokogiri-1.4.4.ebuild 2237 RMD160 bbf3f1b129d12b968e3a68b72d3117d765581797 SHA1 a00dda2cf070147db41bd80fbf44333d2f026cf8 SHA256 82ed15ae1d1f15ba630a0cdd4bb6fc2affca0d81460103c26c3c2ce6a9e2c0c2
-MISC ChangeLog 8213 RMD160 84ec7c2cdaf04ed109b477c208ff844934d883a9 SHA1 1e399b426f206b6512353f6a2342e752e04a42fb SHA256 02b81b91f45439bae4a0de2048dd2063103752032794d7b483b3118f8baf9b55
+MISC ChangeLog 8311 RMD160 4416074fd779a1cb0287d3a8331ae5b576a1f617 SHA1 08164298cd99a6b0e5033645f8e772136916ce8b SHA256 7f98f98d5bd32a2202867c5e12a5b1852c12f9aca61fe5fa0450e0d2559e7066
 MISC metadata.xml 548 RMD160 f7ad1aa047983cec3f318daa55967b1f59a6cbcd SHA1 0efa90c1c82af2fe4fd5feca24263d6330e258b0 SHA256 b001ebe70b094bd1ddc9d3fa45fa754e23362feb325c7e74e97f8d4c815ded7c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk3axj0ACgkQodBTJSDyo65bHAD/ftgdpvdhh1wDOBemr+/rVtc9
-IQ+/HxzBiysCz+B8fdsA/0D1/RgRwbk4mT5E0qpprX8VfoZt1xV41deuMfVEndZi
-=hkLL
+iF4EAREIAAYFAk4YJBYACgkQiIP6VqMIqNfQLAEAj2DdNjXq/lSRsSwjjMhqXYlC
+SJ2nT1HfMCFlR/3mRKUA/Rp2iO6zsZxgl9X39SuHvMtoRIRTzFzselpm+I9OlfyN
+=gM2D
 -----END PGP SIGNATURE-----
